Thu Jul 11 10:39:18 2002  George Lebl <jirka@5z.com>

	* daemon/gdm-net.c, daemon/xdmcp.c: some indenting foo

	* gui/gdmlogin.c, gui/gdmchooser.c, gui/greeter/greeter.c:  Set
	  the IO channels to be unbuffered just like in the daemon and
	  set their encoding to NULL.  We want to be as raw as possible

	* gui/gdmlogin.c, gui/greeter/greeter_item_pam.c: initially leave
	  the prompt entry insensitive.  Also initially set the entry to
	  "..." in the greeter since otherwise it will be a little
	  unresponsive to the first keystroke.  Fixes #83187

Thu Jul 11 09:41:55 2002  George Lebl <jirka@5z.com>

	* daemon/gdm-net.c, daemon/xdmcp.c: Apply patch from
	  Kesor <kesor@mail.ru> to set the io channel encoding to NULL
	  before trying to make it unbuffered to get rid of warning 

2002-07-11 Hasbullah Bin Pit <sebol@ikhlas.com>

	* gui/gdmlanguages.c : Added Malay / B.Melayu as language options.

Thu Jul 11 2002  Steve Fox <drfickle@uberh4x0r.org>

	* gui/greeter/themes/happygnome/*: Update Happy GNOME theme
	with new logo, new Disconnect/Quit icon 

Wed Jul 10 13:36:03 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c, gui/gdmlogin.c, gui/greeter/greeter.c,
	  gui/gdmchooser.c:  When we first open the X connection, set
	  the cursor to a busy cursor (watch) and also don't set the
	  pointer cursor in the greeters until we are actually ready.
	  Also do cursor voodoo in the chooser.

Tue Jul 09 15:29:00 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c: some more sanity from Oswald, but this doesn't
	  fix a real bug, just a theoretical one.

Tue Jul 09 15:26:43 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.1

Tue Jul 09 11:09:53 2002  George Lebl <jirka@5z.com>

	* configure.in, daemon/Makefile.am: Fix #85785 by adding all the
	  extra libs (which includes -lcrypt) to the LDFLAGS of the
	  gdm_binary.  This also as a side effect doesn't link all those
	  libs to things that don't need them.

Tue Jul 09 10:47:31 2002  George Lebl <jirka@5z.com>
