@@ -1,3 +1,12 @@
+Thu Jul 11 10:54:28 2002  George Lebl <jirka@5z.com>
+
+	* gui/greeter/greeter.c, gui/greeter/greeter_configuration.h,
+	  gui/greeter/greeter_item.c:  Apply a patch from
+	  Terje Rosten <terjeros@phys.ntnu.no> to also obey the 24 hour
+	  clock setting in the graphical greeter.  This makes the setup
+	  proggie a little inconsistent as the setting is in the standard
+	  greeter tab, so we'll have to figure that one out as well.
+
 Thu Jul 11 10:39:18 2002  George Lebl <jirka@5z.com>
 
 	* daemon/gdm-net.c, daemon/xdmcp.c: some indenting foo
